# fs-watch

./: Cargo.toml  README.md
src/: cli.rs  filter.rs  handler.rs  main.rs  metadata.rs  watcher.rs
