[package]
name = "fs-watch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
globset = "0.4.16"
notify = { version = "8.0.0", features = ["crossbeam-channel"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
